--- a/about.html
+++ b/about.html
@@ -7,7 +7,7 @@
         <meta name="description" content="">
         <meta name="author" content="">
 
-        <title>Tooplate's Little Fashion - About Page</title>
+        <title>Milstonepromoters</title>
 
         <!-- CSS FILES -->
         <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -20,7 +20,7 @@
         <link href="css/bootstrap-icons.css" rel="stylesheet">
 
         <link rel="stylesheet" href="css/slick.css"/>
-
+        <link rel="icon" href="logo-removebg-preview.png">
         <link href="css/tooplate-little-fashion.css" rel="stylesheet">
         
 <!--
@@ -65,7 +65,8 @@ https://www.tooplate.com/view/2127-little-fashion
                             </li>
 
                             <li class="nav-item">
-                                <a class="nav-link active" href="about.html">Story</a>
+                                
+                                <a class="nav-link active" href="about.html">About</a>
                             </li>
 
                             <li class="nav-item">
@@ -119,11 +120,10 @@ https://www.tooplate.com/view/2127-little-fashion
                                 <div class="team-info">
                                     <h5 class="mb-0">T.Rajendran</h5>
                                     <strong class="text-muted"></strong>
-
-                                    <!-- Button trigger modal -->
-                                    <button type="button" class="btn custom-modal-btn" data-bs-toggle="modal" data-bs-target="#don">
+ <!-- Button trigger modal 
+                                    <button type="button" class="btn custom-modal-btn" data-bs-toggle="modal" data-bs-target="#kelly">
                                       <i class="bi-plus-circle-fill"></i>
-                                    </button>
+                                    </button>-->
 
                                 </div>
                             </div>
@@ -131,32 +131,32 @@ https://www.tooplate.com/view/2127-little-fashion
 
                         <div class="col-lg-4 mb-4 col-12">
                             <div class="team-thumb d-flex align-items-center">
-                                <img src="images/people/portrait-british-woman.jpeg" class="img-fluid custom-circle-image team-image me-4" alt="">
+                                <img src="images/people/senior-man-wearing-white-face-mask-covid-19-campaign-with-design-space.jpeg" class="img-fluid custom-circle-image team-image me-4" alt="">
 
                                 <div class="team-info">
                                     <h5 class="mb-0">K.Ramachandran</h5>
                                     <strong class="text-muted"></strong>
 
-                                    <!-- Button trigger modal -->
+                                    <!-- Button trigger modal 
                                     <button type="button" class="btn custom-modal-btn" data-bs-toggle="modal" data-bs-target="#kelly">
                                       <i class="bi-plus-circle-fill"></i>
-                                    </button>
+                                    </button>-->
                                 </div>
                             </div>
                         </div>
 
                         <div class="col-lg-4 mb-lg-0 mb-4 col-12">
                             <div class="team-thumb d-flex align-items-center">
-                                <img src="images/people/beautiful-woman-face-portrait-brown-background.jpeg" class="img-fluid custom-circle-image team-image me-4" alt="">
+                                <img src="images/people/senior-man-wearing-white-face-mask-covid-19-campaign-with-design-space.jpeg" class="img-fluid custom-circle-image team-image me-4" alt="">
 
                                 <div class="team-info">
                                     <h5 class="mb-0">R.Thiruppathi</h5>
                                     <strong class="text-muted"></strong>
 
-                                    <!-- Button trigger modal -->
-                                    <button type="button" class="btn custom-modal-btn" data-bs-toggle="modal" data-bs-target="#marie">
+                                    <!-- Button trigger modal 
+                                    <button type="button" class="btn custom-modal-btn" data-bs-toggle="modal" data-bs-target="#kelly">
                                       <i class="bi-plus-circle-fill"></i>
-                                    </button>
+                                    </button>-->
                                 </div>
                             </div>
                         </div>
@@ -177,9 +177,9 @@ https://www.tooplate.com/view/2127-little-fashion
                                     <p class="lead">"I wanted to take a moment to express my gratitude for the outstanding service provided by Milestone Promoters. Your leadership and dedication to excellence are truly commendable. Thank you for overseeing our project with such professionalism and ensuring that every detail was meticulously executed."</p>
 
                                     <div class="slick-testimonial-client d-flex align-items-center mt-4">
-                                        <img src="images/people/senior-man-wearing-white-face-mask-covid-19-campaign-with-design-space.jpeg" class="img-fluid custom-circle-image me-3" alt="">
+                                        <img src="images/people/beautiful-woman-face-portrait-brown-background.jpeg" class="img-fluid custom-circle-image me-3" alt="">
 
-                                        <span>George, <strong class="text-muted">Digital Art Fashion</strong></span>
+                                        <span>Arumugam P <strong class="text-muted"></strong></span>
                                     </div>
                                 </div>
 
@@ -189,7 +189,7 @@ https://www.tooplate.com/view/2127-little-fashion
                                     <div class="slick-testimonial-client d-flex align-items-center mt-4">
                                         <img src="images/people/beautiful-woman-face-portrait-brown-background.jpeg" class="img-fluid custom-circle-image me-3" alt="">
 
-                                        <span>Sandar, <strong class="text-muted">Zoom Fashion Idea</strong></span>
+                                        <span>Abishek  <strong class="text-muted"></strong></span>
                                     </div>
                                 </div>
 
@@ -199,7 +199,7 @@ https://www.tooplate.com/view/2127-little-fashion
                                     <div class="slick-testimonial-client d-flex align-items-center mt-4">
                                         <img src="images/people/portrait-british-woman.jpeg" class="img-fluid custom-circle-image me-3" alt="">
 
-                                        <span>Marie, <strong class="text-muted">Art Fashion Design</strong></span>
+                                        <span>Haseeb <strong class="text-muted"></strong></span>
                                     </div>
                                 </div>
 
@@ -215,7 +215,7 @@ https://www.tooplate.com/view/2127-little-fashion
                                     <div class="slick-testimonial-client d-flex align-items-center mt-4">
                                         <img src="images/people/woman-wearing-mask-face-closeup-covid-19-green-background.jpeg" class="img-fluid custom-circle-image me-3" alt="">
 
-                                        <span>Catherine, <strong class="text-muted">Dress Fashion</strong></span>
+                                        <span>Ritheesh, <strong class="text-muted"></strong></span>
                                     </div>
                                 </div>
                             </div>
@@ -246,10 +246,6 @@ https://www.tooplate.com/view/2127-little-fashion
 
                             <li class="footer-menu-item"><a href="products.html" class="footer-menu-link">Products</a></li>
 
-                            <li class="footer-menu-item"><a href="#" class="footer-menu-link">Privacy policy</a></li>
-
-                            <li class="footer-menu-item"><a href="faq.html" class="footer-menu-link">FAQs</a></li>
-
                             <li class="footer-menu-item"><a href="contact.html" class="footer-menu-link">Contact</a></li>
                         </ul>
                     </div>
@@ -259,13 +255,9 @@ https://www.tooplate.com/view/2127-little-fashion
 
                         <ul class="social-icon">
 
-                            <li><a href="#" class="social-icon-link bi-youtube"></a></li>
+                            <li><a href="https://www.youtube.com/@SaiParadiseVilla-tr3bp" class="social-icon-link bi-youtube"></a></li>
+                            <li><a href="https://www.instagram.com/milestone_promoters?utm_source=ig_web_button_share_sheet&igsh=ZDNlZDc0MzIxNw==" class="social-icon-link bi-instagram"></a></li>
 
-                            <li><a href="#" class="social-icon-link bi-whatsapp"></a></li>
-
-                            <li><a href="#" class="social-icon-link bi-instagram"></a></li>
-
-                            <li><a href="#" class="social-icon-link bi-skype"></a></li>
                         </ul>
                     </div>
 
