--- a/index.html
+++ b/index.html
@@ -22,7 +22,8 @@
         <link rel="stylesheet" href="css/slick.css"/>
 
         <link href="css/tooplate-little-fashion.css" rel="stylesheet">
-<!--
+        <link rel="icon" href="logo-removebg-preview.png">
+        <!--
 
 Tooplate 2127 Little Fashion
 
@@ -64,7 +65,7 @@ https://www.tooplate.com/view/2127-little-fashion
                             </li>
 
                             <li class="nav-item">
-                                <a class="nav-link" href="about.html">Story</a>
+                                <a class="nav-link" href="about.html">About us</a>
                             </li>
 
                             <li class="nav-item">
@@ -214,7 +215,7 @@ https://www.tooplate.com/view/2127-little-fashion
                         <div class="col-lg-4 col-12 mb-3">
                             <div class="product-thumb">
                                 <a href="#">
-                                    <img src="images/9365db3f16764e29ecf0969ccf341ab8.jpg" class="img-fluid product-image" alt="">
+                                    <img src="images/Desktop - 1.png" class="img-fluid product-image" alt="">
                                 </a>
 
                                 <div class="product-top d-flex">
@@ -256,7 +257,7 @@ https://www.tooplate.com/view/2127-little-fashion
                                         <p class="product-p"></p>
                                     </div>
 
-                                    <small class="product-price text-muted ms-auto mt-auto mb-5">$45</small>
+                                    <small class="product-price text-muted ms-auto mt-auto mb-5"></small>
                                 </div>
                             </div>
                         </div>
@@ -424,11 +425,9 @@ https://www.tooplate.com/view/2127-little-fashion
                         <h5 class="text-white mb-3">Sitemap</h5>
 
                         <ul class="footer-menu d-flex flex-wrap">
-                            <li class="footer-menu-item"><a href="about.html" class="footer-menu-link">Story</a></li>
+                            <li class="footer-menu-item"><a href="about.html" class="footer-menu-link">About</a></li>
 
                             <li class="footer-menu-item"><a href="products.html" class="footer-menu-link">Products</a></li>
-
-                            <li class="footer-menu-item"><a href="#" class="footer-menu-link">Privacy policy</a></li>
 
                            <!-- <li class="footer-menu-item"><a href="faq.html" class="footer-menu-link">FAQs</a></li>-->
 
