--- a/products.html
+++ b/products.html
@@ -20,7 +20,7 @@
         <link href="css/bootstrap-icons.css" rel="stylesheet">
 
         <link rel="stylesheet" href="css/slick.css"/>
-
+        <link rel="icon" href="logo-removebg-preview.png">
         <link href="css/tooplate-little-fashion.css" rel="stylesheet">
 <!--
 
@@ -65,7 +65,7 @@ https://www.tooplate.com/view/2127-little-fashion
                             </li>
 
                             <li class="nav-item">
-                                <a class="nav-link" href="about.html">Story</a>
+                                <a class="nav-link" href="about.html">About us</a>
                             </li>
 
                             <li class="nav-item">
@@ -147,7 +147,7 @@ https://www.tooplate.com/view/2127-little-fashion
                                     <a href="#" class="bi-heart-fill product-icon ms-auto"></a>
                                 </div>
 
-                                <div class="product-info d-flex">
+                                <!--<div class="product-info d-flex">
                                     <div>
                                         <h5 class="product-title mb-0">
                                             <a href="" class="product-title-link">Fashion set</a>
@@ -165,7 +165,7 @@ https://www.tooplate.com/view/2127-little-fashion
                             <div class="product-thumb">
                                 <a href="">
                                     <img src="images/IMG-20240511-WA0019.jpg" class="img-fluid product-image" alt="">
-                                </a>
+                                </a>-->
 
                                 <div class="product-top d-flex">
                                     <a href="#" class="bi-heart-fill product-icon ms-auto"></a>
@@ -187,7 +187,7 @@ https://www.tooplate.com/view/2127-little-fashion
                         <div class="col-lg-4 col-12">
                             <div class="product-thumb">
                                 <a href="">
-                                    <img src="images/9365db3f16764e29ecf0969ccf341ab8.jpg" class="img-fluid product-image" alt="">
+                                    <img src="images/Desktop - 1.png" class="img-fluid product-image" alt="">
                                 </a>
 
                                 <div class="product-top d-flex">
@@ -320,25 +320,24 @@ https://www.tooplate.com/view/2127-little-fashion
                 <div class="row">
 
                     <div class="col-lg-3 col-10 me-auto mb-4">
-                        <h4 class="text-white mb-3"><a href="index.html">Little</a> Fashion</h4>
-                        <p class="copyright-text text-muted mt-lg-5 mb-4 mb-lg-0">Copyright © 2022 <strong>Little Fashion</strong></p>
+                        <h4 class="text-white mb-3"><a href="index.html">MILESTONE Promoters
+                         </a> </h4>
+                        <p class="copyright-text text-muted mt-lg-5 mb-4 mb-lg-0">Copyright © 2022 <strong>milstonepromoters</strong></p>
                         <br>
-                        <p class="copyright-text">Designed by <a href="https://www.tooplate.com/" target="_blank">Tooplate</a></p>
+                        <p class="copyright-text">Designed by <a href="https://www.tooplate.com/" target="_blank">Lexion Tech</a></p>
                     </div>
 
                     <div class="col-lg-5 col-8">
                         <h5 class="text-white mb-3">Sitemap</h5>
 
                         <ul class="footer-menu d-flex flex-wrap">
-                            <li class="footer-menu-item"><a href="about.html" class="footer-menu-link">Story</a></li>
+                            <li class="footer-menu-item"><a href="about.html" class="footer-menu-link">About us</a></li>
 
-                            <li class="footer-menu-item"><a href="#" class="footer-menu-link">Products</a></li>
+                            <li class="footer-menu-item"><a href="products.html" class="footer-menu-link">Products</a></li>
 
-                            <li class="footer-menu-item"><a href="#" class="footer-menu-link">Privacy policy</a></li>
+                          
 
-                            <li class="footer-menu-item"><a href="#" class="footer-menu-link">FAQs</a></li>
-
-                            <li class="footer-menu-item"><a href="#" class="footer-menu-link">Contact</a></li>
+                            <li class="footer-menu-item"><a href="contact.html" class="footer-menu-link">Contact</a></li>
                         </ul>
                     </div>
 
@@ -349,7 +348,7 @@ https://www.tooplate.com/view/2127-little-fashion
 
                             <li><a href="https://www.youtube.com/@SaiParadiseVilla-tr3bp" class="social-icon-link bi-youtube"></a></li>
 
-                            <li><a href="#" class="social-icon-link bi-whatsapp"></a></li>
+                      
 
                             <li><a href="https://www.instagram.com/milestone_promoters?utm_source=ig_web_button_share_sheet&igsh=ZDNlZDc0MzIxNw==" class="social-icon-link bi-instagram"></a></li>
 
