--- a/products.html
+++ b/products.html
@@ -174,7 +174,7 @@ https://www.tooplate.com/view/2127-little-fashion
                                 <div class="product-info d-flex">
                                     <div>
                                         <h5 class="product-title mb-0">
-                                            <a href="" class="product-title-link">Milestone</a>
+                                            <a href="https://milestonecomingsoon.vercel.app/" class="product-title-link">Milestone</a>
                                         </h5>
 
                                         <p class="product-p">Makkinampatti</p>
@@ -197,7 +197,7 @@ https://www.tooplate.com/view/2127-little-fashion
                                 <div class="product-info d-flex">
                                     <div>
                                         <h5 class="product-title mb-0">
-                                            <a href="" class="product-title-link">Sai Paradise</a>
+                                            <a href="https://milestonecomingsoon.vercel.app/" class="product-title-link">Sai Paradise</a>
                                         </h5>
 
                                         <p class="product-p">Jothi Nagar</p>
@@ -209,7 +209,7 @@ https://www.tooplate.com/view/2127-little-fashion
                         </div>
                         <div class="col-lg-4 col-12">
                             <div class="product-thumb">
-                                <a href="">
+                                <a href="https://milestonecomingsoon.vercel.app/">
                                     <img src="images/IMG-20240511-WA0019.jpg" class="img-fluid product-image" alt="">
                                 </a>
 
@@ -220,7 +220,7 @@ https://www.tooplate.com/view/2127-little-fashion
                                 <div class="product-info d-flex">
                                     <div>
                                         <h5 class="product-title mb-0">
-                                            <a href="" class="product-title-link">Raja Nagar</a>
+                                            <a href="https://milestonecomingsoon.vercel.app/" class="product-title-link">Raja Nagar</a>
                                         </h5>
 
                                         <p class="product-p"></p>
