--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@ https://www.tooplate.com/view/2127-little-fashion
                                 <div class="product-info d-flex">
                                     <div>
                                         <h5 class="product-title mb-0">
-                                            <a href="https://cascadevillas.netlify.app/" class="product-title-link">Cascade villas and polts</a>
+                                            <a href="https://cascade-villas-and-polts.vercel.app/" class="product-title-link">Cascade villas and polts</a>
                                         </h5>
 
                                         <p class="product-p"></p>
@@ -240,18 +240,18 @@ https://www.tooplate.com/view/2127-little-fashion
 
                         <div class="col-lg-4 col-12">
                             <div class="product-thumb">
-                                <a href="#">
+                                <a href="https://milestonecomingsoon.vercel.app/">
                                     <img src="images/IMG-20240511-WA0019.jpg" class="img-fluid product-image" alt="">
                                 </a>
 
                                 <div class="product-top d-flex">
-                                    <a href="#" class="bi-heart-fill product-icon ms-auto"></a>
+                                    <a href="https://milestonecomingsoon.vercel.app/" class="bi-heart-fill product-icon ms-auto"></a>
                                 </div>
 
                                 <div class="product-info d-flex">
                                     <div>
                                         <h5 class="product-title mb-0">
-                                            <a href="#" class="product-title-link">Milestone </a>
+                                            <a href="https://milestonecomingsoon.vercel.app/" class="product-title-link">Milestone </a>
                                         </h5>
 
                                         <p class="product-p"></p>
