--- a/index.html
+++ b/index.html
@@ -76,8 +76,8 @@ https://www.tooplate.com/view/2127-little-fashion
                                 <a class="nav-link" href="contact.html">Contact</a>
                             </li>
 
-                            <!--<li class="nav-item">
-                                <a class="nav-link" href="faq.html">FAQs</a>
+                            <li class="nav-item">
+                                <a class="nav-link" href="https://milestonepromoters.trafft.com/">Booking Schedule</a>
                             </li>
 
                         </ul>
