--- a/index.html
+++ b/index.html
@@ -221,7 +221,7 @@ https://www.tooplate.com/view/2127-little-fashion
                                 <div class="product-info d-flex">
                                     <div>
                                         <h5 class="#">
-                                            <a href="#" class="product-title-link">SAI PARADISE</a>
+                                            <a href="https://milestonecomingsoon.vercel.app/" class="product-title-link">SAI PARADISE</a>
                                         </h5>
 
                                         <p class="product-p"></p>
