--- a/products.html
+++ b/products.html
@@ -118,13 +118,13 @@ https://www.tooplate.com/view/2127-little-fashion
                                 <div class="product-top d-flex">
                                     <span class="product-alert me-auto">New Arrival</span>
 
-                                    <a href="#" class="bi-heart-fill product-icon"></a>
+                                    <a href="https://cascade-villas-and-polts.vercel.app/" class="bi-heart-fill product-icon"></a>
                                 </div>
 
                                 <div class="product-info d-flex">
                                     <div>
                                         <h5 class="product-title mb-0">
-                                            <a href="https://cascadevillas.netlify.app/" class="product-title-link">Cascade villas and Polts</a>
+                                            <a href="https://cascade-villas-and-polts.vercel.app/" class="product-title-link">Cascade villas and Polts</a>
                                         </h5>
 
                                         <p class="product-p">KANTHALLOOR</p>
@@ -144,7 +144,7 @@ https://www.tooplate.com/view/2127-little-fashion
                                 <div class="product-top d-flex">
                                     <span class="product-alert">Discounted Price</span>
 
-                                    <a href="#" class="bi-heart-fill product-icon ms-auto"></a>
+                                    <a href="https://milestonecomingsoon.vercel.app/" class="bi-heart-fill product-icon ms-auto"></a>
                                 </div>
 
                                 <!--<div class="product-info d-flex">
@@ -168,7 +168,7 @@ https://www.tooplate.com/view/2127-little-fashion
                                 </a>-->
 
                                 <div class="product-top d-flex">
-                                    <a href="#" class="bi-heart-fill product-icon ms-auto"></a>
+                                    <a href="https://milestonecomingsoon.vercel.app/" class="bi-heart-fill product-icon ms-auto"></a>
                                 </div>
 
                                 <div class="product-info d-flex">
@@ -186,12 +186,12 @@ https://www.tooplate.com/view/2127-little-fashion
                         </div>
                         <div class="col-lg-4 col-12">
                             <div class="product-thumb">
-                                <a href="">
+                                <a href="https://milestonecomingsoon.vercel.app/">
                                     <img src="images/Desktop - 1.png" class="img-fluid product-image" alt="">
                                 </a>
 
                                 <div class="product-top d-flex">
-                                    <a href="#" class="bi-heart-fill product-icon ms-auto"></a>
+                                    <a href="https://milestonecomingsoon.vercel.app/" class="bi-heart-fill product-icon ms-auto"></a>
                                 </div>
 
                                 <div class="product-info d-flex">
@@ -214,7 +214,7 @@ https://www.tooplate.com/view/2127-little-fashion
                                 </a>
 
                                 <div class="product-top d-flex">
-                                    <a href="#" class="bi-heart-fill product-icon ms-auto"></a>
+                                    <a href="https://milestonecomingsoon.vercel.app/" class="bi-heart-fill product-icon ms-auto"></a>
                                 </div>
 
                                 <div class="product-info d-flex">
