--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!doctype html>
 <html lang="en">
     <head>
@@ -182,14 +183,14 @@ https://www.tooplate.com/view/2127-little-fashion
 
                         <div class="col-lg-4 col-12 mb-3">
                             <div class="product-thumb">
-                                <a href="#">
+                                <a href="https://cascade-villas-and-polts.vercel.app/">
                                     <img src="images/IMG-20240511-WA0025.jpg" class="img-fluid product-image" alt="">
                                 </a>
 
                                 <div class="product-top d-flex">
                                     <span class="product-alert me-auto">New Arrival</span>
 
-                                    <a href="#" class="bi-heart-fill product-icon"></a>
+                                    <a href="https://cascade-villas-and-polts.vercel.app/" class="bi-heart-fill product-icon"></a>
                                 </div>
 
                                 <div class="product-info d-flex">
@@ -208,19 +209,19 @@ https://www.tooplate.com/view/2127-little-fashion
 
                         <div class="col-lg-4 col-12 mb-3">
                             <div class="product-thumb">
-                                <a href="#">
+                                <a href="https://milestonecomingsoon.vercel.app/">
                                     <img src="images/Desktop - 1.png" class="img-fluid product-image" alt="">
                                 </a>
 
                                 <div class="product-top d-flex">
                                     <span class="product-alert">Low Price</span>
 
-                                    <a href="#" class="bi-heart-fill product-icon ms-auto"></a>
+                                    <a href="https://milestonecomingsoon.vercel.app/" class="bi-heart-fill product-icon ms-auto"></a>
                                 </div>
 
                                 <div class="product-info d-flex">
                                     <div>
-                                        <h5 class="#">
+                                        <h5 class="https://milestonecomingsoon.vercel.app/">
                                             <a href="https://milestonecomingsoon.vercel.app/" class="product-title-link">SAI PARADISE</a>
                                         </h5>
 
